objects/CO_Treasury_Product_Fraud_Solutions__c.object
<CustomObject>
    <fields>
        <fullName>CF_ACH_Disallow__c</fullName>
        <label>ACH Disallow?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Only</fullName>
                </value>
                <value>
                    <fullName>Debit Only</fullName>
                </value>
                <value>
                    <fullName>Debit and Credit</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_ACH_Filter__c</fullName>
        <description>This field is to check ACH Filter</description>
        <inlineHelpText>Needed for ACH Pos Pay</inlineHelpText>
        <label>ACH Filter?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to store Account Name</description>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Treasury_Product_Fraud_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_Branch__c</fullName>
        <description>This field is to store Branch from Account</description>
        <formula>CF_Account_Name__r.LLC_BI__Branch__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_CIF__c</fullName>
        <description>This field is to store CIF# from Account</description>
        <formula>CF_Account_Name__r.CIF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Deposit_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Deposit object</description>
        <label>Deposit Account Name</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Setup Informations FS</relationshipLabel>
        <relationshipName>Setup_Informations_FS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Payee_Name_Verification__c</fullName>
        <description>This field is to check Payee Name Verification</description>
        <inlineHelpText>Needed for Check Pos Pay</inlineHelpText>
        <label>Payee Name Verification?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to map Fraud Solutions record to the Treasury Service record.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipName>Treasury_Product_Fraud_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Setup Information FS</label>
    <nameField>
        <displayFormat>SID-{00000}</displayFormat>
        <label>Setup Information FS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Setup Informations FS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>